--- a/css.css
+++ b/css.css
@@ -5,7 +5,14 @@
 	
 }
 .msg{
-	color:red;
+	color:white;
+	background: #a48983;
+	padding: 5px 5px 5px 5px;
+	width:700px;
+	border: 2px solid #095d64;
+	margin-top:150px;
+	margin-left:380px;
+
 }
 .logo{ 
 	position: absolute;
