--- a/css.css
+++ b/css.css
@@ -14,6 +14,43 @@
 	margin-left:380px;
 
 }
+.select-css {
+	cursor:pointer;
+display: block; 
+font-size: 16px; 
+font-family: sans-serif; 
+font-weight: 300; 
+color: #444; 
+line-height: 1.3; 
+padding: .6em 1.4em .5em .8em; width: 20%; 
+max-width: 100%; 
+box-sizing: border-box; 
+margin: 0; 
+border: 1px solid #aaa;
+ box-shadow: 0 1px 0 1px rgba(0,0,0,.04); 
+border-radius: .5em;
+ -moz-appearance: none;
+ -webkit-appearance: none;
+ appearance: none;
+ background-color: #fff; 
+background-repeat: no-repeat, repeat;
+background-position: right .7em top 50%, 0 0;
+background-size: .65em auto, 100%; 
+} 
+ .select-css::-ms-expand { display: none; } 
+ .select-css:hover { border-color: #888; } 
+ .select-css:focus { border-color: #aaa; 
+ box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
+ box-shadow: 0 0 0 3px -moz-mac-focusring; 
+color: #222;
+ outline: none; 
+} 
+ .select-css option { font-weight:normal; } 
+ *[dir="rtl"] .select-css, :root:lang(ar) .select-css, :root:lang(iw) .select-css { 
+background-position: left .7em top 50%, 0 0; 
+padding: .6em .8em .5em 1.4em; 
+
+}
 .logo{ 
 	position: absolute;
 	font-size: 30px;
@@ -37,6 +74,9 @@
 	width: 20px;
 
 }
+.type{
+	
+}
 #sub
 {
 	display: block;
@@ -44,21 +84,22 @@
 	margin-left: 10px;
 	background:#a11f1fc2;	
 }
+
 .text{
 	border-radius: 50% 50% 50% 50% / 5% 5% 5% 5% ;
   	box-shadow: -5px -5px rgba(0,0,0,.25);
 	  background:#A48983;
 	  color:white;
+	  margin-top: 35px;
 	  text-align: center;
 	  padding: 5px;
 	  width: 15%;
 }
-
 #add_new{
 	left:310px;
-	margin-top: 90px;
+	margin-top: 0px;
 	margin-left: 350px;
-	padding: 1.5em;
+	padding: 1.0em;
 }
 
 .side_list{
@@ -189,4 +230,19 @@ body {
 	text-align: center;
 	text-decoration: none;
 }
+#type_tr {
+	position:absolute;
+	top:200px;
+	padding: 0.5em;
+	left:710px;
+	width:200px;
+	background: #a11f1fc2;
+	text-align: center;
+	color:white;
+	text-decoration: none;
+	overflow-y: auto;
+}
 
+.category {
+	display: block;
+}
