--- a/css.css
+++ b/css.css
@@ -10,8 +10,10 @@
 	padding: 5px 5px 5px 5px;
 	width:700px;
 	border: 2px solid #095d64;
-	margin-top:150px;
-	margin-left:380px;
+	margin-top: 30px;
+	margin-left:680px;
+	float:left;
+	position: absolute;
 
 }
 .select-css {
